[package]
name = "rust_etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
libc = "0.2.149"
procfs = "0.16.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
rusqlite = "0.29.0"
sysinfo = "0.29.10"